test fix for BagIcon not showing full height

--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -1,6 +1,7 @@
 .Header {
   position: fixed;
   top: 0;
+  left: 0;
   z-index: 1000;
   width: 100%;
   height: 100px;
